# FreeDynamics-pypi

./: requirements.txt
vacancy_predictor/: pyproject.toml
