[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vacancy-predictor"
version = "1.0.0"
description = "A comprehensive ML tool for vacancy prediction with GUI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu.email@example.com"}
]
maintainers = [
    {name = "Tu Nombre", email = "tu.email@example.com"}
]
keywords = [
    "machine-learning", 
    "vacancy", 
    "prediction", 
    "gui", 
    "data-science",
    "artificial-intelligence",
    "scikit-learn",
    "pandas",
    "visualization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "openpyxl>=3.0.7",
    "xlrd>=2.0.1",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tuusuario/vacancy-predictor"
Documentation = "https://vacancy-predictor.readthedocs.io"
Repository = "https://github.com/tuusuario/vacancy-predictor"
"Bug Tracker" = "https://github.com/tuusuario/vacancy-predictor/issues"
Changelog = "https://github.com/tuusuario/vacancy-predictor/blob/main/CHANGELOG.md"

[project.scripts]
vacancy-predictor = "vacancy_predictor.cli.commands:main"
vacancy-predictor-gui = "vacancy_predictor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vacancy_predictor*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
vacancy_predictor = ["*.txt", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=vacancy_predictor --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false